src/components/comments/helpers/index.module.sass
@import 'src/styles/subsocial-vars.scss'

.BumbleContent
  display: inline-block
  margin-top: $space_tiny !important
  padding: $space_small $space_normal
  border-radius: 15px
  border-top-left-radius: 0
  background-color: #fff
  box-shadow: $shadow

  .DfMdEditor
    margin-top: $space_small

.DfCommentAlert
  margin-top: -$space_small
  margin-right: -$space_normal
  margin-left: -$space_normal
  margin-bottom: $space_small
  border-top-left-radius: 0 !important
  border-top-right-radius: 15px !important

